@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho


class APIGateway {
}
class TableController {
    - _tableRepositories: ITableRepositories
    + CreateTable(CreateTableRequestDTO createTable): Task<IActionResult> 
}

interface ITableRepositories <<interface>> {
    + CreateTable(CreateTableRequestDTO createTable): Task<GetTableResponseDTO> 
}

class TableRepositories {
    - _tableDao: TableDAO
    + CreateTable(CreateTableRequestDTO createTable): Task<GetTableResponseDTO>
}

class TableDAO {
    - _client.From<Table> : ISupabaseTable<Table>
    - _client.From<TableType> : ISupabaseTable<TableType>
    + CreateTable(CreateTableRequestDTO createTable): Task<GetTableResponseDTO> 
    + IsShopExists(Guid shopId): Task<bool> 
    + IsTypeExists(Guid typeId): Task<bool> 
    + GetTableByNumber(string number, Guid shopId): Task<bool> 
}

class Table {
    + Id: Guid
    + TableNumber: string
    + Capacity: int
    + Status: string
    + Description: string
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + ShopId: Guid
    + TypeId: Guid
}

class TableType {
    + Id: Guid
    + Name: string
    + Description: string
    + PriceByHour: decimal
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

APIGateway -- TableController
TableController -- ITableRepositories
ITableRepositories <|-- TableRepositories
TableRepositories "1"--"1..*" TableDAO
TableDAO "1"--"0..*" Table
TableDAO "1"--"0..*" TableType

@enduml
